WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
287701
[WPE][GTK] `invalid use of non-static data member` error with GCC 12
https://bugs.webkit.org/show_bug.cgi?id=287701
Summary
[WPE][GTK] `invalid use of non-static data member` error with GCC 12
Vitaly Dyackhov
Reported
2025-02-14 07:28:22 PST
``` In file included from /home/buildbot/worker/WPE-Linux-64-bit-Release-Ubuntu-2204-Build/build/Source/WebCore/css/values/primitives/CSSPrimitiveNumeric.h:27, from /home/buildbot/worker/WPE-Linux-64-bit-Release-Ubuntu-2204-Build/build/Source/WebCore/css/values/primitives/CSSPrimitiveNumericTypes.h:29, from /home/buildbot/worker/WPE-Linux-64-bit-Release-Ubuntu-2204-Build/build/Source/WebCore/css/values/primitives/CSSPrimitiveNumericTypes+EvaluateCalc.h:28, from /home/buildbot/worker/WPE-Linux-64-bit-Release-Ubuntu-2204-Build/build/Source/WebCore/css/values/color/CSSColorDescriptors.h:29, from /home/buildbot/worker/WPE-Linux-64-bit-Release-Ubuntu-2204-Build/build/Source/WebCore/css/values/color/CSSColor.h:29, from /home/buildbot/worker/WPE-Linux-64-bit-Release-Ubuntu-2204-Build/build/Source/WebCore/style/values/color/StyleColor.h:34, from /home/buildbot/worker/WPE-Linux-64-bit-Release-Ubuntu-2204-Build/build/Source/WebCore/rendering/style/ScrollbarColor.h:28, from /home/buildbot/worker/WPE-Linux-64-bit-Release-Ubuntu-2204-Build/build/Source/WebCore/platform/ScrollableArea.h:35, from /home/buildbot/worker/WPE-Linux-64-bit-Release-Ubuntu-2204-Build/build/Source/WebCore/platform/KeyboardScrollingAnimator.h:31, from /home/buildbot/worker/WPE-Linux-64-bit-Release-Ubuntu-2204-Build/build/Source/WebCore/page/Page.h:31, from /home/buildbot/worker/WPE-Linux-64-bit-Release-Ubuntu-2204-Build/build/Source/WebCore/rendering/RenderObject.h:35, from /home/buildbot/worker/WPE-Linux-64-bit-Release-Ubuntu-2204-Build/build/Source/WebCore/rendering/RenderElement.h:27, from /home/buildbot/worker/WPE-Linux-64-bit-Release-Ubuntu-2204-Build/build/Source/WebCore/rendering/RenderLayerModelObject.h:26, from /home/buildbot/worker/WPE-Linux-64-bit-Release-Ubuntu-2204-Build/build/Source/WebCore/rendering/RenderBoxModelObject.h:29, from /home/buildbot/worker/WPE-Linux-64-bit-Release-Ubuntu-2204-Build/build/Source/WebCore/rendering/LegacyInlineBox.h:24, from /home/buildbot/worker/WPE-Linux-64-bit-Release-Ubuntu-2204-Build/build/Source/WebCore/rendering/LegacyInlineTextBox.h:26, from /home/buildbot/worker/WPE-Linux-64-bit-Release-Ubuntu-2204-Build/build/Source/WebCore/layout/integration/inline/InlineIteratorBoxLegacyPath.h:28, from /home/buildbot/worker/WPE-Linux-64-bit-Release-Ubuntu-2204-Build/build/Source/WebCore/layout/integration/inline/InlineIteratorLineBoxLegacyPath.h:28, from /home/buildbot/worker/WPE-Linux-64-bit-Release-Ubuntu-2204-Build/build/Source/WebCore/layout/integration/inline/InlineIteratorLineBox.h:29, from /home/buildbot/worker/WPE-Linux-64-bit-Release-Ubuntu-2204-Build/build/Source/WebCore/layout/integration/inline/InlineIteratorLogicalOrderTraversal.h:28, from /home/buildbot/worker/WPE-Linux-64-bit-Release-Ubuntu-2204-Build/build/Source/WebCore/editing/TextIterator.h:30, from /home/buildbot/worker/WPE-Linux-64-bit-Release-Ubuntu-2204-Build/build/Source/WebCore/accessibility/AccessibilityObject.h:38, from /home/buildbot/worker/WPE-Linux-64-bit-Release-Ubuntu-2204-Build/build/Source/WebCore/accessibility/AXTextMarker.h:27, from /home/buildbot/worker/WPE-Linux-64-bit-Release-Ubuntu-2204-Build/build/Source/WebCore/accessibility/AXObjectCache.h:30, from /home/buildbot/worker/WPE-Linux-64-bit-Release-Ubuntu-2204-Build/build/Source/WebCore/page/Chrome.h:24, from /home/buildbot/worker/WPE-Linux-64-bit-Release-Ubuntu-2204-Build/build/Source/WebCore/Modules/gamepad/NavigatorGamepad.cpp:31: /home/buildbot/worker/WPE-Linux-64-bit-Release-Ubuntu-2204-Build/build/Source/WebCore/css/values/primitives/CSSPrimitiveData.h: In substitution of ‘template<class auto:250> requires ValidKeywordForList<auto:250, WebCore::CSS::PrimitiveKeywordList<Ks ...> > constexpr WebCore::CSS::PrimitiveDataIndex<WebCore::CSS::PrimitiveNumeric<WebCore::CSS::LengthPercentageRaw<WebCore::CSS::Range{0.0, +Inf, WebCore::CSS::RangeOptions::Default}, float> > >::PrimitiveDataIndex(auto:250) [with auto:250 = WebCore::CSS::PrimitiveNumeric<WebCore::CSS::LengthPercentageRaw<WebCore::CSS::Range{0.0, +Inf, WebCore::CSS::RangeOptions::Default}, float> >]’: /home/buildbot/worker/WPE-Linux-64-bit-Release-Ubuntu-2204-Build/build/Source/WebCore/css/values/primitives/CSSPrimitiveData.h:249:11: required from ‘WebCore::CSS::PrimitiveData<N, Ks>::PrimitiveData(WebCore::CSS::PrimitiveData<N, Ks>::Raw) [with N = WebCore::CSS::PrimitiveNumeric<WebCore::CSS::LengthPercentageRaw<WebCore::CSS::Range{0.0, +Inf, WebCore::CSS::RangeOptions::Default}, float> >; Ks = {}; WebCore::CSS::PrimitiveData<N, Ks>::Raw = WebCore::CSS::LengthPercentageRaw<WebCore::CSS::Range{0.0, +Inf, WebCore::CSS::RangeOptions::Default}, float>]’ /home/buildbot/worker/WPE-Linux-64-bit-Release-Ubuntu-2204-Build/build/Source/WebCore/css/values/primitives/CSSPrimitiveNumeric.h:87:11: required from ‘constexpr WebCore::CSS::PrimitiveNumeric< <template-parameter-1-1> >::PrimitiveNumeric(WebCore::CSS::ValueLiteral<unitValue>) requires requires{{Raw(WebCore::CSS::PrimitiveNumeric< <template-parameter-1-1> >::__ct ::value)};} [with E = WebCore::CSS::LengthUnit; E unitValue = WebCore::CSS::LengthUnit::Px; RawType = WebCore::CSS::LengthPercentageRaw<WebCore::CSS::Range{0.0, +Inf, WebCore::CSS::RangeOptions::Default}, float>]’ /home/buildbot/worker/WPE-Linux-64-bit-Release-Ubuntu-2204-Build/build/Source/WebCore/css/values/primitives/CSSPrimitiveNumeric.h:258:17: required from ‘constexpr WebCore::SpaceSeparatedArray<T, N>::SpaceSeparatedArray(Ts ...) [with Ts = {WebCore::CSS::ValueLiteral<WebCore::CSS::LengthUnit::Px>, WebCore::CSS::ValueLiteral<WebCore::CSS::LengthUnit::Px>, WebCore::CSS::ValueLiteral<WebCore::CSS::LengthUnit::Px>, WebCore::CSS::ValueLiteral<WebCore::CSS::LengthUnit::Px>}; T = WebCore::CSS::LengthPercentage<WebCore::CSS::Range{0.0, +Inf, WebCore::CSS::RangeOptions::Default}>; long unsigned int N = 4]’ /home/buildbot/worker/WPE-Linux-64-bit-Release-Ubuntu-2204-Build/build/Source/WebCore/css/values/backgrounds/CSSBorderRadius.h:68:5: required from here /home/buildbot/worker/WPE-Linux-64-bit-Release-Ubuntu-2204-Build/build/Source/WebCore/css/values/primitives/CSSPrimitiveData.h:249:11: error: invalid use of non-static data member ‘WebCore::CSS::PrimitiveNumericRaw<WebCore::CSS::Range{0.0, +Inf, WebCore::CSS::RangeOptions::Default}, WebCore::CSS::LengthPercentageUnit, float>::value’ 249 | , index { raw } | ^~~~~~~~~~~~~ In file included from /home/buildbot/worker/WPE-Linux-64-bit-Release-Ubuntu-2204-Build/build/Source/WebCore/css/values/primitives/CSSPrimitiveKeywordList.h:28, from /home/buildbot/worker/WPE-Linux-64-bit-Release-Ubuntu-2204-Build/build/Source/WebCore/css/values/primitives/CSSPrimitiveData.h:27, from /home/buildbot/worker/WPE-Linux-64-bit-Release-Ubuntu-2204-Build/build/Source/WebCore/css/values/primitives/CSSPrimitiveNumeric.h:27, from /home/buildbot/worker/WPE-Linux-64-bit-Release-Ubuntu-2204-Build/build/Source/WebCore/css/values/primitives/CSSPrimitiveNumericTypes.h:29, from /home/buildbot/worker/WPE-Linux-64-bit-Release-Ubuntu-2204-Build/build/Source/WebCore/css/values/primitives/CSSPrimitiveNumericTypes+EvaluateCalc.h:28, from /home/buildbot/worker/WPE-Linux-64-bit-Release-Ubuntu-2204-Build/build/Source/WebCore/css/values/color/CSSColorDescriptors.h:29, from /home/buildbot/worker/WPE-Linux-64-bit-Release-Ubuntu-2204-Build/build/Source/WebCore/css/values/color/CSSColor.h:29, from /home/buildbot/worker/WPE-Linux-64-bit-Release-Ubuntu-2204-Build/build/Source/WebCore/style/values/color/StyleColor.h:34, from /home/buildbot/worker/WPE-Linux-64-bit-Release-Ubuntu-2204-Build/build/Source/WebCore/rendering/style/ScrollbarColor.h:28, from /home/buildbot/worker/WPE-Linux-64-bit-Release-Ubuntu-2204-Build/build/Source/WebCore/platform/ScrollableArea.h:35, from /home/buildbot/worker/WPE-Linux-64-bit-Release-Ubuntu-2204-Build/build/Source/WebCore/platform/KeyboardScrollingAnimator.h:31, from /home/buildbot/worker/WPE-Linux-64-bit-Release-Ubuntu-2204-Build/build/Source/WebCore/page/Page.h:31, from /home/buildbot/worker/WPE-Linux-64-bit-Release-Ubuntu-2204-Build/build/Source/WebCore/rendering/RenderObject.h:35, from /home/buildbot/worker/WPE-Linux-64-bit-Release-Ubuntu-2204-Build/build/Source/WebCore/rendering/RenderElement.h:27, from /home/buildbot/worker/WPE-Linux-64-bit-Release-Ubuntu-2204-Build/build/Source/WebCore/rendering/RenderLayerModelObject.h:26, from /home/buildbot/worker/WPE-Linux-64-bit-Release-Ubuntu-2204-Build/build/Source/WebCore/rendering/RenderBoxModelObject.h:29, from /home/buildbot/worker/WPE-Linux-64-bit-Release-Ubuntu-2204-Build/build/Source/WebCore/rendering/LegacyInlineBox.h:24, from /home/buildbot/worker/WPE-Linux-64-bit-Release-Ubuntu-2204-Build/build/Source/WebCore/rendering/LegacyInlineTextBox.h:26, from /home/buildbot/worker/WPE-Linux-64-bit-Release-Ubuntu-2204-Build/build/Source/WebCore/layout/integration/inline/InlineIteratorBoxLegacyPath.h:28, from /home/buildbot/worker/WPE-Linux-64-bit-Release-Ubuntu-2204-Build/build/Source/WebCore/layout/integration/inline/InlineIteratorLineBoxLegacyPath.h:28, from /home/buildbot/worker/WPE-Linux-64-bit-Release-Ubuntu-2204-Build/build/Source/WebCore/layout/integration/inline/InlineIteratorLineBox.h:29, from /home/buildbot/worker/WPE-Linux-64-bit-Release-Ubuntu-2204-Build/build/Source/WebCore/layout/integration/inline/InlineIteratorLogicalOrderTraversal.h:28, from /home/buildbot/worker/WPE-Linux-64-bit-Release-Ubuntu-2204-Build/build/Source/WebCore/editing/TextIterator.h:30, from /home/buildbot/worker/WPE-Linux-64-bit-Release-Ubuntu-2204-Build/build/Source/WebCore/accessibility/AccessibilityObject.h:38, from /home/buildbot/worker/WPE-Linux-64-bit-Release-Ubuntu-2204-Build/build/Source/WebCore/accessibility/AXTextMarker.h:27, from /home/buildbot/worker/WPE-Linux-64-bit-Release-Ubuntu-2204-Build/build/Source/WebCore/accessibility/AXObjectCache.h:30, from /home/buildbot/worker/WPE-Linux-64-bit-Release-Ubuntu-2204-Build/build/Source/WebCore/page/Chrome.h:24, from /home/buildbot/worker/WPE-Linux-64-bit-Release-Ubuntu-2204-Build/build/Source/WebCore/Modules/gamepad/NavigatorGamepad.cpp:31: /home/buildbot/worker/WPE-Linux-64-bit-Release-Ubuntu-2204-Build/build/Source/WebCore/css/values/primitives/CSSPrimitiveNumericRaw.h:50:12: note: declared here 50 | double value; | ^~~~~ ```
Attachments
Add attachment
proposed patch, testcase, etc.
Vitaly Dyackhov
Comment 1
2025-02-14 08:14:36 PST
Pull request:
https://github.com/WebKit/WebKit/pull/40621
EWS
Comment 2
2025-02-14 11:50:48 PST
Committed
290410@main
(691f82307e9a): <
https://commits.webkit.org/290410@main
> Reviewed commits have been landed. Closing PR #40621 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2025-02-14 11:51:18 PST
<
rdar://problem/144878745
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug