[WPE][GTK] `invalid use of non-static data member` error with GCC 12 https://bugs.webkit.org/show_bug.cgi?id=287701

Reviewed by Sam Weinig.

It seems to be a bug in GCC 12.

When `PrimitiveData(Raw raw)` is called, the compiler chooses
`PrimitiveDataIndex(ValidKeywordForList<Keywords> auto keyword)` index
constructor and evaluates `ValidKeywordForList` concept, which in turn
evaluates `PrimitiveKeyword` with `PrimitiveNumericRaw` as a
`Keyword` typename. The compiler then complains that its `value`
member is non-static.

Luckily, simply swapping `PrimitiveKeyword<Keyword>` and
`KeywordsList::isValidKeyword(Keyword())` makes the compiler happy.

I think, it works because `KeywordsList::isValidKeyword(Keyword())`
check fails and `PrimitiveKeyword<Keyword>` is not evaluated.

* Source/WebCore/css/values/primitives/CSSPrimitiveKeywordList.h:

Canonical link: https://commits.webkit.org/290410@main